@@ -1,3 +1,8 @@
+Sat May  8 11:07:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/bigdecimal/bigdecimal.c (VpAlloc): ensure buf does not get
+	  collected.  based on a patch masaya tarui at [ruby-dev:41213].
+
 Sat May  8 10:03:39 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/lib/socket.rb (BasicSocket#connect_address): MacOS X 10.6
